# money-stuff-scheduler

./: .dockerignore  .gitignore  Dockerfile  app.py  docker-compose.yml  pyproject.toml  test.py
.github/workflows/: deploy.yml
graph/: __init__.py  graph.py  state.py
graph/nodes/: __init__.py  convert_to_html.py  extract_things_happen.py  fetch_rss.py  publish_to_pages.py  save_to_local.py  send_email.py  translate_body.py  translate_things_happen.py
static/: index.html
